# cdb-adm

./: .gitignore  Cargo.toml  README.md  adm.rs  cli.rs  diff.sh  get.js  go  toactivate.sh
.github/workflows/: ci.yml
cdb-adm/: ad_manager.rs  agents-and-daemons.noon  bootout.noon  cli.rs  coredata.rs  errors.rs  key_chain_data.rs  lib.rs  md.rs  osx.rs  settings.rs  spctl.rs
cdb-adm-app/: pnpm-lock.yaml
cdb-adm-app/src/: App.tsx  main.tsx
cdb-adm-app/src-tauri/: Cargo.toml
cdb-adm-app/src-tauri/src/: lib.rs  main.rs
cdb-adm/ad_manager/: adm.rs  agents-and-daemons.noon  launchctl.rs  parser.rs
cdb-adm/cli/: adb.rs  cdb.rs  traits.rs
examples/: cdb_settings_example.toml
tests/: launchctl-print-gui-501  launchctl-print-system  launchctl-print-system-disabled  launchctl-print-user-501  test_parse_system.rs
