[package]
name = "cdb-adm"
version = "0.0.1"
edition = "2024"
description = "CoreData Backup / Agents and Daemons Manager"
autoexamples = false
autobenches = false

[lib]
name = "cdb_adm"
path = "cdb-adm/lib.rs"

doctest = false
bench = false


[[bin]]
name = "cdb"
path = "./bin/cdb.rs"
doctest = false
bench = false
doc = false


[[bin]]
name = "adm"
path = "./bin/adm.rs"
doctest = false
bench = false
doc = false


[dependencies]
clap = { version = "4.5.35", features = ["derive", "env", "string", "unicode", "wrap_help"] }
hex = "0.4.3"
iocore = "2.3.0"
iocore-test = { path = "../iocore/iocore-test"}
plist = "1.7.1"
regex = "1.11.1"
security-framework = "3.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
verynicetable = "0.6.2"
